wt1 bkleinen/bkleinen.github.io@9bdb9361eca6ad02f77029444216cb2ac1d9680d

--- a/classes/ws2021/m-wt1-webapplications/sprint/day1-monday/index.html
+++ b/classes/ws2021/m-wt1-webapplications/sprint/day1-monday/index.html
@@ -108,13 +108,17 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li class=nav-item>
 <a class=nav-link href=/stagingdrafts/classes/ws2021/m-wt1-webapplications/schedule/>Schedule</a>
 </li>
+<li class=nav-item>
+<a class="nav-link active" href=/stagingdrafts/classes/ws2021/m-wt1-webapplications/sprint/>Sprint</a>
+</li>
 <li class="nav-item dropdown">
 <a class="nav-link dropdown-toggle" data-bs-toggle=dropdown href=# role=button aria-expanded=false>External Links</a>
 <div class=dropdown-menu>
 <a class=dropdown-item target=ex_link href="https://moodle.htw-berlin.de/course/view.php?id=33322">Moodle</a>
 <a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=wsearchv&search=2&veranstaltung.veranstid=178201">LSF</a>
 <a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=wplan&act=stg&pool=stg&show=plan&P.vx=kurz&r_zuordabstgv.semvonint=1&r_zuordabstgv.sembisint=4&k_abstgv.abstgvnr=312">Semesterstundenplan im LSF</a>
-<a class=dropdown-item target=ex_link href=#>Sourcecode</a>
+<a class=dropdown-item target=ex_link href=https://github.com/htw-imi-wt1-ws2021>GitHub Organization</a>
+<a class=dropdown-item target=ex_link href=https://github.com/imiwebtec>GitHub Book</a>
 </div>
 </li>
 </ul>
