demo in wt1 bkleinen/bkleinen.github.io@7f1c34c3a4a01c33446939d932e77b7814b12f64

--- a/material/courses/wt1/index.html
+++ b/material/courses/wt1/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Courses - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
+<title>wt1 - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
 <link rel=icon href=https://bkleinen.github.io/stagingdrafts//favicon.ico>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -29,7 +29,7 @@ running on <a href=https://bkleinen.github.io/stagingdrafts/>https://bkleinen.gi
 <div class="col-md-10 c1 p-2"><div class=container-flex>
 <div class=row>
 <div class=col-9>
-<h1 class="c5 title"> Courses </h1>
+<h1 class="c5 title"> Material for Course Wt1 </h1>
 <small>Website of <a href=https://bkleinen.github.io/stagingdrafts//>Prof. Dr. Barne Kleinen</a>, Professor for Media Informatics
 (<a href=https://imi-bachelor.htw-berlin.de>Bachelor</a>/<a href=https://imi-master.htw-berlin.de>Master</a>)
 at <a href=https://www.htw-berlin.de>HTW Berlin</a>
@@ -92,33 +92,19 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <nav aria-label=breadcrumb role=navigation>
 <ol class="breadcrumb breadcrumb-thin">
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
-<li class="breadcrumb-item active" aria-current=page>courses</li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/courses/>courses</a></li>
+<li class="breadcrumb-item active" aria-current=page>wt1</li>
 </ol>
 </nav>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
-<h3>Material listed by Courses</h3>
+<h2> Material for Course Wt1</h2>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>Info2</a> (6 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus naur form</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python intro</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python resources</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/git-intro/>Git intro</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular expressions</a></li>
+<li>
+<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+</li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/networks/>Networks</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/wt1/>Wt1</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a></li>
-</ul>
-</ul>
-<hr>
 </div>
 </div>
 </div>
