--- a/material/languages/index.html
+++ b/material/languages/index.html
@@ -137,6 +137,12 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
 </li>
 </ul>
+<li><a href=/stagingdrafts/material/courses/wt1/>Wt1</a></li>
+<ul>
+<li hugo-nav=/stagingdrafts/material/deploy/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+</li>
+</ul>
 </ul>
 </li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a>:
