show tax and terms bkleinen/bkleinen.github.io@2f42e0e9192fa5147904ca17a7accb046cae241e

--- a/classes/ws2021/info2/material/index.html
+++ b/classes/ws2021/info2/material/index.html
@@ -133,6 +133,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li><a href=/classes/ws2021/info2/material/algorithms_and_datastructures/>Info 2 Material - Algorithms and Data Structures</a></li>
 <li><a href=/classes/ws2021/info2/material/python/>Info 2 Python</a></li>
 </ul>
+$page {Page(/classes/ws2021/info2/material/_index.md) nopPage 0xc00081c1e0}
 <table class=table>
 <thead>
 <tr>
@@ -169,8 +170,8 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </tr>
 <tr>
 <td><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a></th>
-<td> intellij_IDEA</td>
-<td> intellij_IDEA</td>
+<td> ide, java, python</td>
+<td> intellijIDEA</td>
 </tr>
 <tr>
 <td><a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular Expressions</a></th>
