--- a/material/deploy/continuous/index.html
+++ b/material/deploy/continuous/index.html
@@ -98,6 +98,11 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+&nbsp;
+&nbsp;
 <p><a href=https://12factor.net/dev-prod-parity>The Twelve-Factor App</a></p>
 </div>
 </div>
