--- a/material/deploy/nginx/index.html
+++ b/material/deploy/nginx/index.html
@@ -98,6 +98,18 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/networks/>networks</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/wt1/>wt1</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/web/>web</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tools/nginx/>nginx</a>
 <h2 id=nginx>nginX</h2>
 <ul>
 <li>Website: <a href=https://nginx.org/>https://nginx.org/</a></li>
