--- a/material/git-intro/index.html
+++ b/material/git-intro/index.html
@@ -97,6 +97,15 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tools/git/>git</a>
 <h2 id=source-code-management-mit-git>Source Code Management mit GIT</h2>
 <p>Für Info2 hatte ich im letzten Semester eine GIT-Introduction aufgenomen:</p>
 <p>(Zugänglich mit HTW-Login)</p>
