--- a/material/hugo/hugocheatsheet/index.html
+++ b/material/hugo/hugocheatsheet/index.html
@@ -97,6 +97,15 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/markdown/>markdown</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tools/hugo/>hugo</a>
 <p><a href=https://gohugo.io/content-management/shortcodes/#figure>https://gohugo.io/content-management/shortcodes/#figure</a>
 <figure><img src=https://bkleinen.github.io/stagingdrafts/images/classes/info2/crc-cards.jpg alt="CRC Cards"><figcaption>
 <p>CRC Cards</p>
