--- a/material/languages/python/index.html
+++ b/material/languages/python/index.html
@@ -98,6 +98,15 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>python</a>
+&nbsp;
 <p>&mldr;. content to come</p>
 </div>
 </div>
