--- a/material/regex/index.html
+++ b/material/regex/index.html
@@ -97,6 +97,17 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/regex/>regex</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tools/regex/>regex</a>
 <h2 id=try-out-regex>Try out Regex</h2>
 <ul>
 <li>Javascript: <a href=https://regex101.com/r/sBFSuo/1/>regex101: build, test, and debug regex</a></li>
