--- a/material/complexity/index.html
+++ b/material/complexity/index.html
@@ -97,6 +97,15 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/complexity/>complexity</a>
+&nbsp;
 <p><a href=https://www.khanacademy.org/math/algebra2/x2ec2f6f830c9fb89:logs>Unit: Logarithms from Khan Academy</a></p>
 </div>
 </div>
