--- a/material/index.html
+++ b/material/index.html
@@ -101,6 +101,9 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <h3 id=all-taxonomies-in-alphabetical-order>All Taxonomies in Alphabetical Order</h3>
 <section>
 <ul id=all-taxonomies>
+<hr> $taxonomy: courses
+<hr> $taxonomy_term_pages_map: map[info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions") WeightedPage(0,"VI")] networks:[WeightedPage(0,"Nginx")] wt1:[WeightedPage(0,"Nginx")]]
+<hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a>:
 <ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>Info2</a></li>
@@ -144,6 +147,9 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 </ul>
 </li>
+<hr> $taxonomy: tags
+<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Nginx")]]
+<hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a>:
 <ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/complexity/>Complexity</a></li>
@@ -158,7 +164,13 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus-Naur-Form</a>
 </li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/intellij_idea/>Intellij idea</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/ide/>Ide</a></li>
+<ul>
+<li hugo-nav=/material/intellij/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a>
+</li>
+</ul>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/java/>Java</a></li>
 <ul>
 <li hugo-nav=/material/intellij/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a>
@@ -187,6 +199,9 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li hugo-nav=/material/languages/python-resources/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python Resources</a>
 </li>
+<li hugo-nav=/material/intellij/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a>
+</li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/regex/>Regex</a></li>
 <ul>
@@ -214,6 +229,9 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 </ul>
 </li>
+<hr> $taxonomy: tools
+<hr> $taxonomy_term_pages_map: map[git:[WeightedPage(0,"GIT Intro")] hugo:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] intellijidea:[WeightedPage(0,"IntelliJ")] nginx:[WeightedPage(0,"Nginx")] regex:[WeightedPage(0,"Regular Expressions")] vi:[WeightedPage(0,"VI")]]
+<hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a>:
 <ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/git/>Git</a></li>
@@ -231,7 +249,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <a href=https://bkleinen.github.io/stagingdrafts/material/hugo/markdown/>Hugo Markdown</a>
 </li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/intellij_idea/>Intellij idea</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/intellijidea/>Intellijidea</a></li>
 <ul>
 <li hugo-nav=/material/intellij/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a>
