--- a/material/intellij/index.html
+++ b/material/intellij/index.html
@@ -97,6 +97,19 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/ide/>ide</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/java/>java</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>python</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tools/intellijidea/>intellijIDEA</a>
 <h2 id=learn-intellij>Learn IntelliJ</h2>
 <p>There is now a guided way to learn this complex tool - this video introduces it:</p>
 <ul>
