--- a/material/languages/javascript/index.html
+++ b/material/languages/javascript/index.html
@@ -98,6 +98,14 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/javascript/>JavaScript</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/resources/>Resources</a>
+&nbsp;
 <ul>
 <li>
 <p><a href=https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference>JavaScript reference - JavaScript | MDN</a></p>
