--- a/material/languages/python-resources/index.html
+++ b/material/languages/python-resources/index.html
@@ -98,6 +98,15 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>python</a>
+&nbsp;
 <h2 id=the-official-python-documentation>The Official Python Documentation</h2>
 <ul>
 <li><a href=https://docs.python.org/3/tutorial/>The Python Tutorial — Python 3.10.0 documentation</a></li>
