--- a/material/tools/intellijidea/index.html
+++ b/material/tools/intellijidea/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Backus-Naur-Form - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
+<title>intellijIDEA - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
 <link rel=icon href=https://bkleinen.github.io/stagingdrafts//favicon.ico>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -27,7 +27,7 @@ running on <a href=https://bkleinen.github.io/stagingdrafts/>https://bkleinen.gi
 <div class="col-md-10 c1 p-2"><div class=container-flex>
 <div class=row>
 <div class=col-9>
-<h1 class="c5 title"> Backus-Naur-Form </h1>
+<h1 class="c5 title"> Material for Tool Intellij ID ea </h1>
 <small>Website of <a href=https://bkleinen.github.io/stagingdrafts//>Prof. Dr. Barne Kleinen</a>, Professor for Media Informatics
 (<a href=https://imi-bachelor.htw-berlin.de>Bachelor</a>/<a href=https://imi-master.htw-berlin.de>Master</a>)
 at <a href=https://www.htw-berlin.de>HTW Berlin</a>
@@ -58,7 +58,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 </li>
 <li class=nav-item>
-<a class="nav-link active" href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://bkleinen.github.io/stagingdrafts/software_projects/>Software Projects</a>
@@ -90,60 +90,18 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <nav aria-label=breadcrumb role=navigation>
 <ol class="breadcrumb breadcrumb-thin">
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
-<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/>material</a></li>
-<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/languages/>languages</a></li>
-<li class="breadcrumb-item active" aria-current=page>bnf</li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/tools/>tools</a></li>
+<li class="breadcrumb-item active" aria-current=page>intellijidea</li>
 </ol>
 </nav>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
-<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
-within Taxonomies:
-&nbsp;
-<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
-<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
-&nbsp;
-<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
-<a href=https://bkleinen.github.io/stagingdrafts/material/tags/grammar/>grammar</a>
-&nbsp;
-<h2 id=the-gist>The Gist</h2>
-<p>You might see something like&mldr;.</p>
-<p>if your repository is</p>
-<pre><code> https://github.com/&lt;organisation&gt;/&lt;repo&gt;
-</code></pre>
-<p>the entry in your <code>.git/config</code> would be</p>
-<pre><code> [remote &quot;origin&quot;]
-         url = git@github.com:&lt;organisation&gt;/&lt;repo&gt;.git
-</code></pre>
-<p>Where <code>\&lt;organisation\></code> should be replaced with the github organisation, e.g. &ldquo;htw-imi-info2&rdquo; and
-<code>\&lt;repo\></code> with the name of the respective git repository, e.g. &ldquo;python-jupyter-notebooks&rdquo;, yielding at this concrete text:</p>
-<pre><code>https://github.com/htw-imi-info2/python-jupyter-notebooks
-
-[remote &quot;origin&quot;]
-        url = git@github.com:htw-imi-info2/python-jupyter-notebooks.git
-</code></pre>
-<h2 id=rewrite-rules>Rewrite Rules</h2>
-<p>The convention of informally marking placeholders
-that should be replaced with the delimiters <code>&lt;</code> and <code>></code> stems from the Backus-Naur-Form (BNF).</p>
-<p>The Backus-Naur-Form (BNF) is
-a notation for Context Free Grammars
-that is often used to describe the Syntax of programming languages.</p>
-<p>The above form informal as the <code>&lt;</code> and <code>></code> often just contain informative text about what should replace the placeholder, e.g. &ldquo;repo&rdquo; without a formal definition of possible replacements.</p>
-<p>A rewriting rule in BNF may look like this:
-<code>&lt;expr> ::= &lt;term>|&lt;expr>&lt;addop>&lt;term></code></p>
-<p>where all other terms in <code>&lt;</code> and <code>></code> - corresponding to Non-Terminal-Symbols in Context-Free-Grammars - are defined until they finally
-can be replaced/rewritten with literals (Terminal Symbols in CFG), e.g. by the rewriting rule</p>
-<p><code>&lt;digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"</code></p>
-<h2 id=optional-parameters>Optional Parameters</h2>
-<p>The convention of enclosing e.g. optional parameters in square brackets ([..]) also has
-it&rsquo;s roots in the BNF:</p>
-<pre><code>    &quot;Optional items enclosed in square brackets: [&lt;item-x&gt;].&quot;
-</code></pre>
-<h2 id=links>Links</h2>
+<h2> Material for Tool Intellij ID ea</h2>
 <ul>
-<li><a href=https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form>BNF on Wikipedia (en)</a></li>
-<li><a href=https://de.wikipedia.org/wiki/Backus-Naur-Form>BNF Wikipedia (de)</a></li>
+<li>
+<a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a>
+</li>
 </ul>
 </div>
 </div>
