--- a/material/vi/index.html
+++ b/material/vi/index.html
@@ -97,6 +97,17 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>info2</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/vi/>vi</a>
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tools/>Tools</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tools/vi/>vi</a>
 <h1 id=vi>VI</h1>
 <p>You should learn a couple of vi commands to survive, as vi is available on most *nix computers.</p>
 <h2 id=the-absolute-minimum>The absolute minimum</h2>
