networks bkleinen/bkleinen.github.io@054d5e967c0ef4d4990e7d1129a2432a22781904

--- a/material/ops/nginx/index.html
+++ b/material/ops/nginx/index.html
@@ -91,7 +91,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <ol class="breadcrumb breadcrumb-thin">
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/>material</a></li>
-<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/deploy/>deploy</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/ops/>ops</a></li>
 <li class="breadcrumb-item active" aria-current=page>nginx</li>
 </ol>
 </nav>
