--- a/courses/index.html
+++ b/courses/index.html
@@ -103,19 +103,22 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus naur form</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python intro</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python resources</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>Vi</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/complexity/>Complexity of algorithms</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/git-intro/>Git intro</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular expressions</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/vi/>Vi</a></li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/networks/>Networks</a> (1 Entries)</li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/networks/>Networks</a> (3 Entries)</li>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous integration and delivery</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>Vi</a></li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/wt1/>Wt1</a> (1 Entries)</li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/wt1/>Wt1</a> (2 Entries)</li>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous integration and delivery</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a></li>
 </ul>
 </ul>
 <hr>
