--- a/material/courses/wt1/index.html
+++ b/material/courses/wt1/index.html
@@ -100,7 +100,10 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <h2> Material for Course Wt1</h2>
 <ul>
 <li>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 </div>
