--- a/material/index.html
+++ b/material/index.html
@@ -97,12 +97,23 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=coursenav></div>
 <div class=container-fluid>
 <h2 id=material-and-notes-about-various-topics>Material and Notes about various Topics</h2>
-<p>This is an overview of all Material available on the site.</p>
+<p>This is an overview of all Material available on the site.
+<ul>
+<li><a href=/material/languages/>Languages</a></li>
+<li><a href=/material/ops/>Operations, Continuous Integration and Delivery</a></li>
+<li><a href=/material/complexity/>Complexity of Algorithms</a></li>
+<li><a href=/material/git-intro/>GIT Intro</a></li>
+<li><a href=/material/hugo/hugocheatsheet/>Hugo Cheatsheet</a></li>
+<li><a href=/material/hugo/markdown/>Hugo Markdown</a></li>
+<li><a href=/material/intellij/>IntelliJ</a></li>
+<li><a href=/material/regex/>Regular Expressions</a></li>
+</ul>
+</p>
 <h3 id=all-taxonomies-in-alphabetical-order>All Taxonomies in Alphabetical Order</h3>
 <section>
 <ul id=all-taxonomies>
 <hr> $taxonomy: courses
-<hr> $taxonomy_term_pages_map: map[info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions") WeightedPage(0,"VI")] networks:[WeightedPage(0,"Nginx")] wt1:[WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"VI") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions")] networks:[WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx") WeightedPage(0,"VI")] wt1:[WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a>:
 <ul>
@@ -117,6 +128,9 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li hugo-nav=/material/languages/python-resources/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python Resources</a>
 </li>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
+</li>
 <li hugo-nav=/material/complexity/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/complexity/>Complexity of Algorithms</a>
 </li>
@@ -129,26 +143,32 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li hugo-nav=/material/regex/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular Expressions</a>
 </li>
-<li hugo-nav=/material/vi/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/vi/>VI</a>
-</li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/networks/>Networks</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/continuous/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
+</li>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/wt1/>Wt1</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/continuous/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 </ul>
 </li>
 <hr> $taxonomy: tags
-<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a>:
 <ul>
@@ -217,14 +237,17 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/vi/>Vi</a></li>
 <ul>
-<li hugo-nav=/material/vi/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/vi/>VI</a>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/web/>Web</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/continuous/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 </ul>
@@ -257,8 +280,8 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/nginx/>Nginx</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/regex/>Regex</a></li>
@@ -269,8 +292,8 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/vi/>Vi</a></li>
 <ul>
-<li hugo-nav=/material/vi/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/vi/>VI</a>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
 </li>
 </ul>
 </ul>
