--- a/material/ops/index.html
+++ b/material/ops/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>CI/CD - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
+<title>Operations, Continuous Integration and Delivery - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
 <link rel=icon href=https://bkleinen.github.io/stagingdrafts//favicon.ico>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -27,7 +27,7 @@ running on <a href=https://bkleinen.github.io/stagingdrafts/>https://bkleinen.gi
 <div class="col-md-10 c1 p-2"><div class=container-flex>
 <div class=row>
 <div class=col-9>
-<h1 class="c5 title"> CI/CD </h1>
+<h1 class="c5 title"> Operations, Continuous Integration and Delivery </h1>
 <small>Website of <a href=https://bkleinen.github.io/stagingdrafts//>Prof. Dr. Barne Kleinen</a>, Professor for Media Informatics
 (<a href=https://imi-bachelor.htw-berlin.de>Bachelor</a>/<a href=https://imi-master.htw-berlin.de>Master</a>)
 at <a href=https://www.htw-berlin.de>HTW Berlin</a>
@@ -91,7 +91,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <ol class="breadcrumb breadcrumb-thin">
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/>material</a></li>
-<li class="breadcrumb-item active" aria-current=page>deploy</li>
+<li class="breadcrumb-item active" aria-current=page>ops</li>
 </ol>
 </nav>
 </div>
@@ -99,13 +99,14 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=container-fluid>
 <h3 id=material-in-this-chapter>Material in this chapter:</h3>
 <ul>
-<li><a href=/material/deploy/nginx/>Nginx</a></li>
-<li><a href=/material/deploy/continuous/></a></li>
+<li><a href=/material/ops/continuous/>Continuous Integration and Delivery</a></li>
+<li><a href=/material/ops/nginx/>Nginx</a></li>
+<li><a href=/material/ops/vi/>VI</a></li>
 </ul>
 <section>
 <ul id=all-taxonomies>
 <hr> $taxonomy: courses
-<hr> $taxonomy_term_pages_map: map[info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions") WeightedPage(0,"VI")] networks:[WeightedPage(0,"Nginx")] wt1:[WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"VI") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions")] networks:[WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx") WeightedPage(0,"VI")] wt1:[WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a>:
 <ul>
@@ -120,6 +121,9 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li hugo-nav=/material/languages/python-resources/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python Resources</a>
 </li>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
+</li>
 <li hugo-nav=/material/complexity/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/complexity/>Complexity of Algorithms</a>
 </li>
@@ -132,26 +136,32 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li hugo-nav=/material/regex/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular Expressions</a>
 </li>
-<li hugo-nav=/material/vi/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/vi/>VI</a>
-</li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/networks/>Networks</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/continuous/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
+</li>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/wt1/>Wt1</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/continuous/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 </ul>
 </li>
 <hr> $taxonomy: tags
-<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a>:
 <ul>
@@ -220,14 +230,17 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/vi/>Vi</a></li>
 <ul>
-<li hugo-nav=/material/vi/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/vi/>VI</a>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/web/>Web</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/continuous/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a>
+</li>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 </ul>
@@ -260,8 +273,8 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/nginx/>Nginx</a></li>
 <ul>
-<li hugo-nav=/material/deploy/nginx/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/deploy/nginx/>Nginx</a>
+<li hugo-nav=/material/ops/nginx/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/regex/>Regex</a></li>
@@ -272,8 +285,8 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tools/vi/>Vi</a></li>
 <ul>
-<li hugo-nav=/material/vi/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/vi/>VI</a>
+<li hugo-nav=/material/ops/vi/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a>
 </li>
 </ul>
 </ul>
