--- a/classes/ws2021/m-wt1-webapplications/sprint/day1-monday/index.html
+++ b/classes/ws2021/m-wt1-webapplications/sprint/day1-monday/index.html
@@ -128,6 +128,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 Table of Contents
 </a>
 &nbsp;&nbsp;&nbsp;&nbsp;
+<a href=/classes/ws2021/m-wt1-webapplications/sprint/preparation/>&lt;prev</a>
 </header>
 <div class=collapse id=tocContent>
 <nav id=TableOfContents>
