--- a/classes/ws2021/info2/labs/index.html
+++ b/classes/ws2021/info2/labs/index.html
@@ -188,13 +188,13 @@ Table of Contents
 <li><a href=/classes/ws2021/info2/labs/lab-06-handout/>Info2: Handout for Exercise 6: Infix/Prefix/Postfix</a></li>
 </ul>
 <h2 id=teams>Teams</h2>
-<p>You will work in teams of two or three. You will usually switch teams after three labs.
+<p>You will work in teams of two or three. You will switch teams after three or four labs.
 That means you should form new teams before the following labs:</p>
 <ul>
 <li><a href=lab-01>Exercise 01 - Application Design</a></li>
-<li><a href=lab-04>Exercise 04 - Chatterbox</a></li>
-<li><a href=lab-07>Exercise 07 - Recursive Triangles</a></li>
-<li><a href=lab-10>Exercise 10 - Getting from A to B</a></li>
+<li><a href=lab-05>Exercise 05 - Execution Times</a></li>
+<li><a href=lab-08>Exercise 08 - Eight Queens</a></li>
+<li><a href=lab-11>Exercise 11 - Finite State Automata and Sorting Algorithms</a></li>
 </ul>
 <p>You can chose your team mates but they should be in the same LSF group (1 or 2, aka Tuesday or Thursday group). Each team mate needs to register for the team on Moodle. I will not form teams for you, this is your own responsability. If you have not signed up for a team, you won&rsquo;t be able to hand anything in.</p>
 <h2 id=reports>Reports</h2>
