nw bkleinen/bkleinen.github.io@ed9b9193a16c2764423322a361ddc72e97579aba

--- a/classes/ws2021/networks/labs/lab00_intro/index.html
+++ b/classes/ws2021/networks/labs/lab00_intro/index.html
@@ -136,6 +136,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 Table of Contents
 </a>
 &nbsp;&nbsp;&nbsp;&nbsp;
+<a href=/classes/ws2021/networks/labs/lab01_ch01/>next></a>
 </header>
 <div class=collapse id=tocContent>
 <nav id=TableOfContents>
@@ -145,10 +146,6 @@ Table of Contents
 <li><a href=#1a-simple-web-server-in-java-nanowebserver>1.a Simple Web Server in Java: NanoWebServer</a></li>
 <li><a href=#1b-playing-with-nginx>1.b Playing with Nginx</a></li>
 <li><a href=#1c-setting-up-a-real-server-on-a-virtual-machine>1.c Setting up a real server on a virtual machine</a></li>
-</ul>
-</li>
-<li><a href=#2-wireshark-lab-getting-started>2. Wireshark Lab: Getting Started</a>
-<ul>
 <li><a href=#lab-report>Lab Report</a></li>
 </ul>
 </li>
@@ -181,13 +178,10 @@ computer you can find one.</p>
 <h3 id=1c-setting-up-a-real-server-on-a-virtual-machine>1.c Setting up a real server on a virtual machine</h3>
 <p>We will do this part together in lab, where I will provide each group with
 a virtual server hosted at the HTW - you will install and configure nginx
-on port 80 on these machines.</p>
-<p>** update 21.10.2021: nur bis 1c bearbeiten, so weit wie Sie im lab gekommen sind.**</p>
-<p>** will be moved to lab 01 **</p>
-<h2 id=2-wireshark-lab-getting-started>2. Wireshark Lab: Getting Started</h2>
-<p>We will be doing the <a href=http://gaia.cs.umass.edu/kurose_ross/wireshark.php>Wiresharks Labs</a> from the book.
-Get the &ldquo;<a href=http://www-net.cs.umass.edu/wireshark-labs/Wireshark_Intro_v8.1.docx>Getting Started v8.1</a>&rdquo;
-Lab from Kurose&rsquo;s Website and work through it.</p>
+on port 80 on these machines.
+** update 21.10.2021: nur bis 1c bearbeiten, so weit wie Sie im lab gekommen sind.**</p>
+<p><del>##### 2. Wireshark Lab: Getting Started</del>
+** moved to lab 01 **</p>
 <h3 id=lab-report>Lab Report</h3>
 <p>Prepare a Lab Report together as PDF structured like this Lab Assignment.
 You may work on the reports in flexible teams of 2-3 students.</p>
