--- a/classes/ws2021/networks/labs/lab01_ch01/index.html
+++ b/classes/ws2021/networks/labs/lab01_ch01/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Tags - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
+<title>Lab 01 - Nginx & HTTP - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
 <link rel=icon href=https://bkleinen.github.io/stagingdrafts//favicon.ico>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -27,7 +27,7 @@ running on <a href=https://bkleinen.github.io/stagingdrafts/>https://bkleinen.gi
 <div class="col-md-10 c1 p-2"><div class=container-flex>
 <div class=row>
 <div class=col-9>
-<h1 class="c5 title"> Tags </h1>
+<h1 class="c5 title"> B9 Networks WS 2021/22 - Labs </h1>
 <small>Website of <a href=https://bkleinen.github.io/stagingdrafts//>Prof. Dr. Barne Kleinen</a>, Professor for Media Informatics
 (<a href=https://imi-bachelor.htw-berlin.de>Bachelor</a>/<a href=https://imi-master.htw-berlin.de>Master</a>)
 at <a href=https://www.htw-berlin.de>HTW Berlin</a>
@@ -47,7 +47,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <a class=nav-link href=https://bkleinen.github.io/stagingdrafts/>Home</a>
 </li>
 <li class=nav-item>
-<a class="nav-link dropdown-toggle" data-bs-toggle=dropdown href=# role=button aria-expanded=false>Classes</a>
+<a class="nav-link dropdown-toggle active" data-bs-toggle=dropdown href=# role=button aria-expanded=false>Classes</a>
 <div class=dropdown-menu>
 <a class=dropdown-item href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/>B7 Info 2</a>
 <a class=dropdown-item href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/>B9 Networks</a>
@@ -92,73 +92,112 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <nav aria-label=breadcrumb role=navigation>
 <ol class="breadcrumb breadcrumb-thin">
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
-<li class="breadcrumb-item active" aria-current=page>tags</li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/>classes</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/>ws2021</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/>networks</a></li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/labs/>labs</a></li>
+<li class="breadcrumb-item active" aria-current=page>lab01_ch01</li>
 </ol>
 </nav>
 </div>
-<div class=coursenav></div>
+<div class=coursenav>
+<ul class="nav nav-tabs">
+<li class=nav-item>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/>Overview</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/schedule/>Schedule</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/flipped/>Flipped Classroom</a>
+</li>
+<li class=nav-item>
+<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/resources/>Resources</a>
+</li>
+<li class=nav-item>
+<a class="nav-link active" href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/labs/>Labs</a>
+</li>
+<li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" data-bs-toggle=dropdown href=# role=button aria-expanded=false>External Links</a>
+<div class=dropdown-menu>
+<a class=dropdown-item target=ex_link href="https://moodle.htw-berlin.de/course/view.php?id=33323">Moodle</a>
+<a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=wsearchv&search=2&veranstaltung.veranstid=178930">SU in LSF</a>
+<a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=verpublish&status=init&vmfile=no&moduleCall=webInfo&publishConfFile=webInfo&publishSubDir=veranstaltung&veranstaltung.veranstid=179397">Lab in LSF</a>
+<a class=dropdown-item target=ex_link href=https://github.com/htw-imi-networks>GitHub</a>
+<a class=dropdown-item target=ex_link href="https://lsf.htw-berlin.de/qisserver/rds?state=wplan&act=stg&pool=stg&show=plan&P.vx=kurz&r_zuordabstgv.semvonint=2&r_zuordabstgv.sembisint=2&k_abstgv.abstgvnr=231">Semesterstundenplan im LSF</a>
+</div>
+</li>
+</ul>
+</div>
 <div class=container-fluid>
-<h3>Material listed by Tags</h3>
+<h2 class=followed> Lab 01 - Nginx & HTTP</h2>
+<header class=following>
+<a data-bs-toggle=collapse href=#tocContent role=button aria-expanded=false aria-controls=tocContent>
+Table of Contents
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;
+<a href=/classes/ws2021/networks/labs/lab00_intro/>&lt;prev</a>
+</header>
+<div class=collapse id=tocContent>
+<nav id=TableOfContents>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/complexity/>Complexity</a> (1 Entries)</li>
+<li><a href=#part-1-set-up-a-real-web-server-on-a-virtual-machine>Part 1: Set up a Real Web Server on a Virtual Machine</a>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/complexity/>Complexity of algorithms</a></li>
+<li><a href=#linux--shell-resources>Linux / Shell Resources</a></li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/grammar/>Grammar</a> (1 Entries)</li>
+</li>
+<li><a href=#part-2-set-up-homepages>Part 2: Set up Homepages</a></li>
+<li><a href=#part-3-wireshark-lab-getting-started>Part 3: Wireshark Lab: Getting Started</a></li>
+<li><a href=#part-4-hack-http>Part 4: Hack http</a>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus naur form</a></li>
+<li><a href=#lab-report>Lab Report</a></li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/hugo/>Hugo</a> (1 Entries)</li>
+</li>
+</ul>
+</nav>
+</div>
+<h2 id=part-1-set-up-a-real-web-server-on-a-virtual-machine>Part 1: Set up a Real Web Server on a Virtual Machine</h2>
+<p>We will do this part together in lab, where I will provide each group with
+a virtual server hosted at the HTW - you will install and configure nginx
+on port 80 on these machines.</p>
+<h3 id=linux--shell-resources>Linux / Shell Resources</h3>
 <ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/code_highlighting/>Code highlighting</a></li>
+<li>Here&rsquo;s the link to the very brief intro I wrote:
+<a href=https://bkleinen.github.io/stagingdrafts/material/ops/debian-server/>Setting up a Debian Webserver</a></li>
+<li>This is my recommendation for an introductionary book:
+<a href=https://linuxcommand.org/lc3_learning_the_shell.php#contents>LinuxCommand.org: Learning the shell.</a></li>
+<li>If you prefer videos, this
+<a href="https://www.youtube.com/watch?v=1hvVcEhcbLM">Linux Essentials for Ethical Hackers - Full InfoSec Course - YouTube</a>
+and this <a href="https://www.youtube.com/watch?v=lZAoFs75_cs">Linux for Ethical Hackers (Kali Linux Tutorial) - YouTube</a>
+seem reasonable.</li>
+<li>Note that you are on Debian 11, commands may differ - check the <a href=https://www.debian.org/doc/manuals/debian-reference/>Debian Reference</a>.</li>
 </ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/ide/>Ide</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/java/>Java</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/javascript/>Java script</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/javascript/>Java script resources</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/markdown/>Markdown</a> (2 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/hugocheatsheet/>Hugo cheatsheet</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/markdown/>Hugo markdown</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/ops/>Ops</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/debian-server/>Debian server</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>Python</a> (3 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python intro</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python resources</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/regex/>Regex</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular expressions</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/resources/>Resources</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/javascript/>Java script resources</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/vi/>Vi</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>Vi</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/web/>Web</a> (3 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/debian-server/>Debian server</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous integration and delivery</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a></li>
-</ul>
-</ul>
-<hr>
+<h2 id=part-2-set-up-homepages>Part 2: Set up Homepages</h2>
+<p>For each one in your group, set up a homepage that is accessible via
+<code>http://&lt;servername>/~&lt;username></code> for each of your team members. The
+server roots should be under <code>~/.public_html</code> or ``~/public_html`</p>
+<h2 id=part-3-wireshark-lab-getting-started>Part 3: Wireshark Lab: Getting Started</h2>
+<p>We will be doing the <a href=http://gaia.cs.umass.edu/kurose_ross/wireshark.php>Wiresharks Labs</a> from the book.
+Get the &ldquo;<a href=http://www-net.cs.umass.edu/wireshark-labs/Wireshark_Intro_v8.1.docx>Getting Started v8.1</a>&rdquo;
+Lab from Kurose&rsquo;s Website and work through it.</p>
+<p>Include the answers to the questions in your report; instead of printing the
+two packets, copy the text from a preview / pdf and include them in your report.
+You will need the first one for Part 4!</p>
+<h2 id=part-4-hack-http>Part 4: Hack http</h2>
+<p>Extract the first two lines of the HTTP GET requests issued in Part 2 (e.g. from
+the printouts), open a telnet session on the host on port 80 and send the get
+request manually. You&rsquo;ll need the first two lines (the get and the host) and
+issue two more empty lines.</p>
+<p>Try the same with your own nginx server. Include the results in your report.</p>
+<h3 id=lab-report>Lab Report</h3>
+<p>Prepare a Lab Report together as PDF structured like this Lab Assignment.
+You may work on the reports in flexible teams of 2-3 students.</p>
+<p>Always put the names of all contributing people on your report.</p>
+<p>** put your server name in your report! **</p>
+<p>Each one of you has to hand in the completed Report individually in moodle
+by Friday 17:00 after the second lab meeting!</p>
+<p>In your report, describe what you did and what you found,
+as well as errors or problems you&rsquo;ve encountered.</p>
 </div>
 </div>
 </div>
@@ -187,7 +226,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=col-9>
 This work is licensed under a <a rel=license href=http://creativecommons.org/licenses/by-nc/4.0/>Creative Commons Attribution-NonCommercial 4.0 International License</a>.
 <br><small>
-This page was authored by: B. Kleinen
+This page was authored by: kleinen
 </small>
 </div>
 <div class=col-3>
