--- a/material/hugo/code_highlighting/index.html
+++ b/material/hugo/code_highlighting/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Tags - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
+<title>Code Highlighting - STAGING DRAFTS --- Prof. Dr. Barne Kleinen</title>
 <link rel=icon href=https://bkleinen.github.io/stagingdrafts//favicon.ico>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -27,7 +27,7 @@ running on <a href=https://bkleinen.github.io/stagingdrafts/>https://bkleinen.gi
 <div class="col-md-10 c1 p-2"><div class=container-flex>
 <div class=row>
 <div class=col-9>
-<h1 class="c5 title"> Tags </h1>
+<h1 class="c5 title"> Code Highlighting </h1>
 <small>Website of <a href=https://bkleinen.github.io/stagingdrafts//>Prof. Dr. Barne Kleinen</a>, Professor for Media Informatics
 (<a href=https://imi-bachelor.htw-berlin.de>Bachelor</a>/<a href=https://imi-master.htw-berlin.de>Master</a>)
 at <a href=https://www.htw-berlin.de>HTW Berlin</a>
@@ -60,7 +60,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </div>
 </li>
 <li class=nav-item>
-<a class=nav-link href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+<a class="nav-link active" href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
 </li>
 <li class=nav-item>
 <a class=nav-link href=https://bkleinen.github.io/stagingdrafts/software_projects/>Software Projects</a>
@@ -92,73 +92,146 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <nav aria-label=breadcrumb role=navigation>
 <ol class="breadcrumb breadcrumb-thin">
 <li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/>Home</a></li>
-<li class="breadcrumb-item active" aria-current=page>tags</li>
+<li class=breadcrumb-item><a href=https://bkleinen.github.io/stagingdrafts/material/>material</a></li>
+<li class="breadcrumb-item active" aria-current=page>code_highlighting</li>
 </ol>
 </nav>
 </div>
 <div class=coursenav></div>
 <div class=container-fluid>
-<h3>Material listed by Tags</h3>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/complexity/>Complexity</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/complexity/>Complexity of algorithms</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/grammar/>Grammar</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus naur form</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/hugo/>Hugo</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/code_highlighting/>Code highlighting</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/ide/>Ide</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/java/>Java</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/javascript/>Java script</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/javascript/>Java script resources</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/markdown/>Markdown</a> (2 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/hugocheatsheet/>Hugo cheatsheet</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/markdown/>Hugo markdown</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/ops/>Ops</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/debian-server/>Debian server</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>Python</a> (3 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python intro</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python resources</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>Intelli j</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/regex/>Regex</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular expressions</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/resources/>Resources</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/javascript/>Java script resources</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/vi/>Vi</a> (1 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>Vi</a></li>
-</ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/web/>Web</a> (3 Entries)</li>
-<ul>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/debian-server/>Debian server</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous integration and delivery</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a></li>
-</ul>
-</ul>
+<a href=https://bkleinen.github.io/stagingdrafts/material/>Material</a>
+within Taxonomies:
+&nbsp;
+&nbsp;
+<i><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a></i>:
+<a href=https://bkleinen.github.io/stagingdrafts/material/tags/hugo/>hugo</a>
+&nbsp;
 <hr>
+<h2 id=syntax-highlighting-tryout>Syntax Highlighting Tryout</h2>
+<p>Notes:</p>
+<ul>
+<li>
+<p>switch off javascript that adds bootstrap styles to tables in frontmatter:
+<code>NoStripedTables: true</code></p>
+</li>
+<li>
+<p>many styles available, they can either be set in config (see markup.toml) or
+with the setting <code>noClasses=false</code> via stylesheets. see <code>syntax-xxx.scss</code></p>
+</li>
+<li>
+<p><a href=https://gohugo.io/content-management/syntax-highlighting/>Hugo Doc</a></p>
+</li>
+<li>
+<p>Chroma Styles:</p>
+<ul>
+<li><a href=https://xyproto.github.io/splash/docs/all.html>Chroma Style Gallery</a></li>
+<li><a href=https://xyproto.github.io/splash/docs/longer/all.html>Longer</a></li>
+</ul>
+</li>
+</ul>
+<h3 id=example-from-page>Example from page:</h3>
+<div class=highlight><div class=chroma>
+<table class=lntable><tr><td class=lntd>
+<pre tabindex=0 class=chroma><code><span class=hl><span class=lnt>199
+</span></span></code></pre></td>
+<td class=lntd>
+<pre tabindex=0 class=chroma><code class=language-go data-lang=go><span class=hl><span class=c1>// ... code
+</span></span></code></pre></td></tr></table>
+</div>
+</div><hr>
+<h3 id=without-anything>Without anything</h3>
+<pre tabindex=0><code>$ ls -lart
+
+</code></pre><hr>
+<h3 id=bash>Bash</h3>
+<div class=highlight><div class=chroma>
+<table class=lntable><tr><td class=lntd>
+<pre tabindex=0 class=chroma><code><span class=lnt>199
+</span><span class=lnt>200
+</span><span class=lnt>201
+</span></code></pre></td>
+<td class=lntd>
+<pre tabindex=0 class=chroma><code class=language-bash data-lang=bash>$ ls -lart
+
+some output
+</code></pre></td></tr></table>
+</div>
+</div><div class=highlight><div class=chroma>
+<table class=lntable><tr><td class=lntd>
+<pre tabindex=0 class=chroma><code><span class=lnt>199
+</span><span class=lnt>200
+</span></code></pre></td>
+<td class=lntd>
+<pre tabindex=0 class=chroma><code class=language-shell data-lang=shell><span class=c1># ls -lart</span>
+asdffs
+</code></pre></td></tr></table>
+</div>
+</div><h3 id=heading></h3>
+<p>style = &lsquo;monokai&rsquo;</p>
+<h3 id=java-with-highlight-shortcode>Java with highlight shortcode</h3>
+<div class=highlight><div class=chroma>
+<table class=lntable><tr><td class=lntd>
+<pre tabindex=0 class=chroma><code><span class=lnt>199
+</span><span class=lnt>200
+</span><span class=hl><span class=lnt>201
+</span></span><span class=lnt>202
+</span><span class=lnt>203
+</span><span class=lnt>204
+</span></code></pre></td>
+<td class=lntd>
+<pre tabindex=0 class=chroma><code class=language-java data-lang=java><span class=kd>public</span> <span class=kd>class</span> <span class=nc>XY</span> <span class=o>{</span>
+
+<span class=hl>  <span class=kd>public</span> <span class=kd>static</span> <span class=kt>void</span> <span class=nf>main</span><span class=o>(</span><span class=n>String</span><span class=o>[]</span> <span class=n>args</span><span class=o>){</span>
+</span>
+  <span class=o>}</span>
+<span class=o>}</span></code></pre></td></tr></table>
+</div>
+</div>
+<h3 id=java-with-code-fences>Java with code fences</h3>
+<div class=highlight><div class=chroma>
+<table class=lntable><tr><td class=lntd>
+<pre tabindex=0 class=chroma><code><span class=lnt>199
+</span><span class=lnt>200
+</span><span class=hl><span class=lnt>201
+</span></span><span class=lnt>202
+</span><span class=lnt>203
+</span><span class=lnt>204
+</span></code></pre></td>
+<td class=lntd>
+<pre tabindex=0 class=chroma><code class=language-java data-lang=java><span class=kd>public</span> <span class=kd>class</span> <span class=nc>XY</span> <span class=o>{</span>
+
+<span class=hl>  <span class=kd>public</span> <span class=kd>static</span> <span class=kt>void</span> <span class=nf>main</span><span class=o>(</span><span class=n>String</span><span class=o>[]</span> <span class=n>args</span><span class=o>){</span>
+</span>
+  <span class=o>}</span>
+<span class=o>}</span>
+</code></pre></td></tr></table>
+</div>
+</div><h3 id=java-with-explicit-style---does-not-work>Java with explicit style - does not work</h3>
+<p>Tried both settings for <code>noClasses=true|false</code></p>
+<div class=highlight style=solarized-dark><div class=chroma>
+<table class=lntable><tr><td class=lntd>
+<pre tabindex=0 class=chroma><code><span class=lnt>199
+</span><span class=lnt>200
+</span><span class=hl><span class=lnt>201
+</span></span><span class=lnt>202
+</span><span class=lnt>203
+</span><span class=lnt>204
+</span></code></pre></td>
+<td class=lntd>
+<pre tabindex=0 class=chroma><code class=language-java data-lang=java><span class=kd>public</span> <span class=kd>class</span> <span class=nc>XY</span> <span class=o>{</span>
+
+<span class=hl>  <span class=kd>public</span> <span class=kd>static</span> <span class=kt>void</span> <span class=nf>main</span><span class=o>(</span><span class=n>String</span><span class=o>[]</span> <span class=n>args</span><span class=o>){</span>
+</span>
+  <span class=o>}</span>
+<span class=o>}</span>
+</code></pre></td></tr></table>
+</div>
+</div><hr>
+<h3 id=python>Python</h3>
+<div class=highlight><pre tabindex=0 class=chroma><code class=language-python data-lang=python><span class=k>def</span> <span class=nf>cy</span><span class=p>:</span>
+  <span class=nb>print</span> <span class=s2>&#34;hallo&#34;</span>
+
+</code></pre></div>
 </div>
 </div>
 </div>
@@ -202,7 +275,7 @@ This page was authored by: B. Kleinen
 </small>
 </div>
 </footer>
-<script>let sortTables=!1,stripedTables=!0</script>
+<script>let sortTables=!1,stripedTables=!0;stripedTables=!1</script>
 <script src=https://bkleinen.github.io/stagingdrafts/js/bundle.min.2e77815b9f3f7be195f9d073bea8b3ba3c025f403d0e61ef06c5ba0d08fc7f09.js defer></script>
 </body>
 </html>
