--- a/material/index.html
+++ b/material/index.html
@@ -103,6 +103,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <ul>
 <li><a href=/material/languages/>Languages</a></li>
 <li><a href=/material/ops/>Operations, Continuous Integration and Delivery</a></li>
+<li><a href=/material/hugo/code_highlighting/>Code Highlighting</a></li>
 <li><a href=/material/complexity/>Complexity of Algorithms</a></li>
 <li><a href=/material/git-intro/>GIT Intro</a></li>
 <li><a href=/material/hugo/hugocheatsheet/>Hugo Cheatsheet</a></li>
@@ -176,7 +177,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 </li>
 <hr> $taxonomy: tags
-<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] ops:[WeightedPage(0,"Debian Server")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] hugo:[WeightedPage(0,"Code Highlighting")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] ops:[WeightedPage(0,"Debian Server")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a>:
 <ul>
@@ -190,6 +191,12 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <ul>
 <li hugo-nav=/material/languages/bnf/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus-Naur-Form</a>
+</li>
+</ul>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/hugo/>Hugo</a></li>
+<ul>
+<li hugo-nav=/material/hugo/code_highlighting/>
+<a href=https://bkleinen.github.io/stagingdrafts/material/hugo/code_highlighting/>Code Highlighting</a>
 </li>
 </ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/ide/>Ide</a></li>
