nw bkleinen/bkleinen.github.io@021747d697d7dcf36bc419a7f25a3d9b794975f0

--- a/classes/ws2021/info2/material/index.html
+++ b/classes/ws2021/info2/material/index.html
@@ -128,12 +128,12 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=container-fluid>
 <h2 id=available-material>Available Material</h2>
 <ul>
-<li><a href=/classes/ws2021/info2/material/00_repetition_info1_finger_exercises/>Repetition - Finger Exercises</a></li>
-<li><a href=/classes/ws2021/info2/material/02_terms/>Repetition - Terms</a></li>
-<li><a href=/classes/ws2021/info2/material/03_ide/>IntelliJ & Tools</a></li>
-<li><a href=/classes/ws2021/info2/material/python2/>Python2</a></li>
-<li><a href=/classes/ws2021/info2/material/algorithms_and_datastructures/>Info 2 Material - Algorithms and Data Structures</a></li>
-<li><a href=/classes/ws2021/info2/material/python/>Info 2 Python</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/material/00_repetition_info1_finger_exercises/>Repetition - Finger Exercises</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/material/02_terms/>Repetition - Terms</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/material/03_ide/>IntelliJ & Tools</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/material/python2/>Python2</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/material/algorithms_and_datastructures/>Info 2 Material - Algorithms and Data Structures</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/material/python/>Info 2 Python</a></li>
 </ul>
 <table class=table>
 <thead>
