--- a/material/index.html
+++ b/material/index.html
@@ -101,15 +101,15 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <h2 id=material-and-notes-about-various-topics>Material and Notes about various Topics</h2>
 <p>This is an overview of all Material available on the site.
 <ul>
-<li><a href=/material/languages/>Languages</a></li>
-<li><a href=/material/ops/>Operations, Continuous Integration and Delivery</a></li>
-<li><a href=/material/hugo/code_highlighting/>Code Highlighting</a></li>
-<li><a href=/material/complexity/>Complexity of Algorithms</a></li>
-<li><a href=/material/git-intro/>GIT Intro</a></li>
-<li><a href=/material/hugo/hugocheatsheet/>Hugo Cheatsheet</a></li>
-<li><a href=/material/hugo/markdown/>Hugo Markdown</a></li>
-<li><a href=/material/intellij/>IntelliJ</a></li>
-<li><a href=/material/regex/>Regular Expressions</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/>Languages</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/>Operations, Continuous Integration and Delivery</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/code_highlighting/>Code Highlighting</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/complexity/>Complexity of Algorithms</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/git-intro/>GIT Intro</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/hugocheatsheet/>Hugo Cheatsheet</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/hugo/markdown/>Hugo Markdown</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/intellij/>IntelliJ</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/regex/>Regular Expressions</a></li>
 </ul>
 </p>
 <h3 id=all-taxonomies-in-alphabetical-order>All Taxonomies in Alphabetical Order</h3>
