--- a/material/languages/index.html
+++ b/material/languages/index.html
@@ -101,10 +101,10 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=container-fluid>
 <h3 id=material-in-this-chapter>Material in this chapter:</h3>
 <ul>
-<li><a href=/material/languages/bnf/>Backus-Naur-Form</a></li>
-<li><a href=/material/languages/python/>Python Intro</a></li>
-<li><a href=/material/languages/javascript/>JavaScript Resources</a></li>
-<li><a href=/material/languages/python-resources/>Python Resources</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus-Naur-Form</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python Intro</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/javascript/>JavaScript Resources</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python Resources</a></li>
 </ul>
 <section>
 <ul id=all-taxonomies>
