--- a/material/ops/index.html
+++ b/material/ops/index.html
@@ -101,10 +101,10 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <div class=container-fluid>
 <h3 id=material-in-this-chapter>Material in this chapter:</h3>
 <ul>
-<li><a href=/material/ops/debian-server/>Debian Server</a></li>
-<li><a href=/material/ops/continuous/>Continuous Integration and Delivery</a></li>
-<li><a href=/material/ops/nginx/>Nginx</a></li>
-<li><a href=/material/ops/vi/>VI</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/debian-server/>Debian Server</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/continuous/>Continuous Integration and Delivery</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/nginx/>Nginx</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>VI</a></li>
 </ul>
 <section>
 <ul id=all-taxonomies>
