--- a/classes/ws2021/info2/labs/index.html
+++ b/classes/ws2021/info2/labs/index.html
@@ -172,22 +172,22 @@ Table of Contents
 <p>Ask questions that can&rsquo;t wait in the Moodle Forum. That&rsquo;s better than writing an email, because this way, all people can see the answer. Of course you can also ask during the lab.</p>
 <h3 id=lab-assignments>Lab Assignments</h3>
 <ul>
-<li><a href=/classes/ws2021/info2/labs/lab-00/>Info2: Exercise 00: Programming & Tools</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-01/>Info2: Exercise 01: Application Design</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-02/>Info2: Exercise 02: Implementing CRC Cards</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-03/>Info2: Exercise 03: Histogram </a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-04/>Info2: Exercise 04: Chatterbox</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-05/>Info2: Exercise 05: Execution times</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-06/>Info2: Exercise 06: Reverse Polish Notation</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-07/>Info2: Exercise 07: Recursive Triangles</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-08/>Info2: Exercise 08: Eight Queens</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-08-chat/>Info2: Exercise 08: Multi-Threaded Chat Application</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-09/>Info2: Exercise 09: Probabilistic Algorithms</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-10/>Info2: Exercise 10: Getting from A to B</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-11/>Info2: Exercise 11: Finite State Automata and Sorting Algorithms</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-12/>Info2: Exercise 12: Scrabble Cheater - Basic Edition </a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-13/>Info2: Exercise 13: Scrabble Cheater - Deluxe</a></li>
-<li><a href=/classes/ws2021/info2/labs/lab-06-handout/>Info2: Handout for Exercise 6: Infix/Prefix/Postfix</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-00/>Info2: Exercise 00: Programming & Tools</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-01/>Info2: Exercise 01: Application Design</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-02/>Info2: Exercise 02: Implementing CRC Cards</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-03/>Info2: Exercise 03: Histogram </a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-04/>Info2: Exercise 04: Chatterbox</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-05/>Info2: Exercise 05: Execution times</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-06/>Info2: Exercise 06: Reverse Polish Notation</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-07/>Info2: Exercise 07: Recursive Triangles</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-08/>Info2: Exercise 08: Eight Queens</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-08-chat/>Info2: Exercise 08: Multi-Threaded Chat Application</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-09/>Info2: Exercise 09: Probabilistic Algorithms</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-10/>Info2: Exercise 10: Getting from A to B</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-11/>Info2: Exercise 11: Finite State Automata and Sorting Algorithms</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-12/>Info2: Exercise 12: Scrabble Cheater - Basic Edition </a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-13/>Info2: Exercise 13: Scrabble Cheater - Deluxe</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/info2/labs/lab-06-handout/>Info2: Handout for Exercise 6: Infix/Prefix/Postfix</a></li>
 </ul>
 <h2 id=teams>Teams</h2>
 <p>You will work in teams of two or three. You will switch teams after three or four labs.
