update für wise2021
ohne anpassung für zuul bkleinen/bkleinen.github.io@e39a88fcca96d95ea59efcfeb2050f191092f1cf

--- a/classes/ws2021/info2/labs/lab-04/index.html
+++ b/classes/ws2021/info2/labs/lab-04/index.html
@@ -164,11 +164,11 @@ Table of Contents
 <li>Start your chatterbox by writing a method that listens for a Socket connection on a port. This is your Chatterbox server. For now, just echo what you have read to the console.</li>
 <li>Now write a client that connects to it and writes to a port.</li>
 <li>Test your methods on your own machine.</li>
-<li>Follow the instructions to connect to an HTW lab computer at <a href=https://imi-bachelor.htw-berlin.de/studium/labore/hinweise/entfernter-zugriff-auf-labor-pcs-ueber-vpn-und-remote-desktop/>https://imi-bachelor.htw-berlin.de/studium/labore/hinweise/entfernter-zugriff-auf-labor-pcs-ueber-vpn-und-remote-desktop/</a> and copy your code onto your lab computer. It is recommended you use a ganymed computer. Share your address and port with others and see whether you can chat with each other. You might need to change the default ports of your program to ports between 8000 and 8010.</li>
+<li>If you are not in the lab with the others: Follow the instructions to connect to an HTW lab computer at <a href=https://imi-bachelor.htw-berlin.de/studium/labore/hinweise/entfernter-zugriff-auf-labor-pcs-ueber-vpn-und-remote-desktop/>https://imi-bachelor.htw-berlin.de/studium/labore/hinweise/entfernter-zugriff-auf-labor-pcs-ueber-vpn-und-remote-desktop/</a> and copy your code onto your lab computer. It is recommended you use a ganymed computer. Share your address and port with others and see whether you can chat with each other. You might need to change the default ports of your program to ports between 8000 and 8010.</li>
 </ol>
 <h3 id=step-2-server-can-send-message>Step 2: Server can send message</h3>
 <ol start=5>
-<li>Extend your Server such that you can enter messages on the Server side as well, and extend your Client to receive and Display those messages.</li>
+<li>Extend your Server such that you can enter messages on the Server side as well, and extend your Client to receive and display those messages.</li>
 </ol>
 <h3 id=step-3-simultaneous-sending-and-receiving>Step 3: Simultaneous sending and receiving</h3>
 <ol start=6>
@@ -176,8 +176,7 @@ Table of Contents
 </ol>
 <h2 id=for-the-bored>For the bored:</h2>
 <ol start=7>
-<li>Remember that support desk application we had? Well, can you set it up so that your server listens for someone to type something, feeds it into the support desk, gets the support desk answer back and returns that to the person asking?</li>
-<li>Read up on Eliza and see if you can make a chatterbox &ldquo;shrink&rdquo; (psychiatrist).</li>
+<li>Make a multiplayer game out of Zuul.</li>
 <li>Create a Chat Server that can handle connections from more than one client using one Thread for each connected client.</li>
 </ol>
 <h2 id=lab-report--what-to-turn-in>Lab Report / What to turn in</h2>
