python bkleinen/bkleinen.github.io@81bf5734ed2a383f81c1e3838c0d08a9b7ec1065

--- a/classes/ws2021/info2/material/index.html
+++ b/classes/ws2021/info2/material/index.html
@@ -150,7 +150,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td> </td>
 </tr>
 <tr>
-<td><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python Intro</a></th>
+<td><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Notes on Learning Python</a></th>
 <td> python</td>
 <td> </td>
 </tr>
