--- a/material/courses/info2/index.html
+++ b/material/courses/info2/index.html
@@ -105,7 +105,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus-Naur-Form</a>
 </li>
 <li>
-<a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python Intro</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Notes on Learning Python</a>
 </li>
 <li>
 <a href=https://bkleinen.github.io/stagingdrafts/material/ops/hrz/>Working with HTW Machines</a>
