--- a/classes/ws2021/info2/schedule/index.html
+++ b/classes/ws2021/info2/schedule/index.html
@@ -223,7 +223,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>6</td>
 <td style=text-align:left>45</td>
 <td style=text-align:left>Tue 09/11/2021</td>
-<td style=text-align:left>Maximum Contiguous Subsequence Sum</td>
+<td style=text-align:left>(fällt aus)</td>
 <td style=text-align:left><a href=../labs/lab-05>Execution Times</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -231,7 +231,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 10/11/2021</td>
-<td style=text-align:left>Python Intro</td>
+<td style=text-align:left>(e-learning Python)</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -239,7 +239,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>7</td>
 <td style=text-align:left>46</td>
 <td style=text-align:left>Tue 16/11/2021</td>
-<td style=text-align:left>Recursion</td>
+<td style=text-align:left>Python Intro & Recursion</td>
 <td style=text-align:left><a href=../labs/lab-06>Reverse Polish Notation</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -247,7 +247,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 17/11/2021</td>
-<td style=text-align:left>Permutations (Handout on Permutations), Backtracking (TicTacToe.java),</td>
+<td style=text-align:left>Maximum Contiguous Subsequence Sum</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -255,7 +255,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>8</td>
 <td style=text-align:left>47</td>
 <td style=text-align:left>Tue 23/11/2021</td>
-<td style=text-align:left>Trees (Tree.java - Node.java - TestTree.java</td>
+<td style=text-align:left>Permutations (Handout on Permutations), Backtracking (TicTacToe.java),</td>
 <td style=text-align:left><a href=../labs/lab-07>Recursive Triangles</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -263,7 +263,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 24/11/2021</td>
-<td style=text-align:left>AVL-Trees (AVL Tutorial), Tries</td>
+<td style=text-align:left>Trees (Tree.java - Node.java - TestTree.java</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -271,7 +271,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>9</td>
 <td style=text-align:left>48</td>
 <td style=text-align:left>Tue 30/11/2021</td>
-<td style=text-align:left>Random numbers - Probabilistic Algorithms</td>
+<td style=text-align:left>AVL-Trees (AVL Tutorial), Tries</td>
 <td style=text-align:left><a href=../labs/lab-08>Eight Queens</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -279,7 +279,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 01/12/2021</td>
-<td style=text-align:left>Graphs</td>
+<td style=text-align:left>Random numbers - Probabilistic Algorithms</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -287,7 +287,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>10</td>
 <td style=text-align:left>49</td>
 <td style=text-align:left>Tue 07/12/2021</td>
-<td style=text-align:left>Graph Algorithms, Quadtrees</td>
+<td style=text-align:left>Graphs</td>
 <td style=text-align:left><a href=../labs/lab-09>Probabilistic Algorithms</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -295,7 +295,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 08/12/2021</td>
-<td style=text-align:left>Finite State Automata</td>
+<td style=text-align:left>Graph Algorithms, Quadtrees</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -303,7 +303,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>11</td>
 <td style=text-align:left>50</td>
 <td style=text-align:left>Tue 14/12/2021</td>
-<td style=text-align:left>Fun with Python</td>
+<td style=text-align:left>Finite State Automata</td>
 <td style=text-align:left><a href=../labs/lab-10>Getting from A to B</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -440,6 +440,14 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 09/02/2022</td>
 <td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+</tr>
+<tr>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
