--- a/courses/index.html
+++ b/courses/index.html
@@ -111,7 +111,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/courses/info2/>Info2</a> (9 Entries)</li>
 <ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus naur form</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python intro</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Notes on learning python</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/hrz/>Working with htw machines</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python resources</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/ops/vi/>Vi</a></li>
