--- a/material/languages/index.html
+++ b/material/languages/index.html
@@ -102,14 +102,14 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <h3 id=material-in-this-chapter>Material in this chapter:</h3>
 <ul>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus-Naur-Form</a></li>
-<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python Intro</a></li>
+<li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Notes on Learning Python</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/javascript/>JavaScript Resources</a></li>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python Resources</a></li>
 </ul>
 <section>
 <ul id=all-taxonomies>
 <hr> $taxonomy: courses
-<hr> $taxonomy_term_pages_map: map[bash:[WeightedPage(0,"Working with HTW Machines")] hrz:[WeightedPage(0,"Working with HTW Machines")] info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Python Intro") WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Python Resources") WeightedPage(0,"VI") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions")] networks:[WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx") WeightedPage(0,"VI")] wt1:[WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[bash:[WeightedPage(0,"Working with HTW Machines")] hrz:[WeightedPage(0,"Working with HTW Machines")] info2:[WeightedPage(0,"Backus-Naur-Form") WeightedPage(0,"Notes on Learning Python") WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Python Resources") WeightedPage(0,"VI") WeightedPage(0,"Complexity of Algorithms") WeightedPage(0,"GIT Intro") WeightedPage(0,"IntelliJ") WeightedPage(0,"Regular Expressions")] networks:[WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx") WeightedPage(0,"VI")] wt1:[WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/courses/>Courses</a>:
 <ul>
@@ -131,7 +131,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/bnf/>Backus-Naur-Form</a>
 </li>
 <li hugo-nav=/material/languages/python/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python Intro</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Notes on Learning Python</a>
 </li>
 <li hugo-nav=/material/ops/hrz/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/ops/hrz/>Working with HTW Machines</a>
@@ -191,7 +191,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 </ul>
 </li>
 <hr> $taxonomy: tags
-<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] htw:[WeightedPage(0,"Working with HTW Machines")] hugo:[WeightedPage(0,"Code Highlighting")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] ops:[WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Debian Server")] python:[WeightedPage(0,"Python Intro") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
+<hr> $taxonomy_term_pages_map: map[complexity:[WeightedPage(0,"Complexity of Algorithms")] grammar:[WeightedPage(0,"Backus-Naur-Form")] htw:[WeightedPage(0,"Working with HTW Machines")] hugo:[WeightedPage(0,"Code Highlighting")] ide:[WeightedPage(0,"IntelliJ")] java:[WeightedPage(0,"IntelliJ")] javascript:[WeightedPage(0,"JavaScript Resources")] markdown:[WeightedPage(0,"Hugo Cheatsheet") WeightedPage(0,"Hugo Markdown")] ops:[WeightedPage(0,"Working with HTW Machines") WeightedPage(0,"Debian Server")] python:[WeightedPage(0,"Notes on Learning Python") WeightedPage(0,"Python Resources") WeightedPage(0,"IntelliJ")] regex:[WeightedPage(0,"Regular Expressions")] resources:[WeightedPage(0,"JavaScript Resources")] vi:[WeightedPage(0,"VI")] web:[WeightedPage(0,"Debian Server") WeightedPage(0,"Continuous Integration and Delivery") WeightedPage(0,"Nginx")]]
 <hr>
 <li><a href=https://bkleinen.github.io/stagingdrafts/tags/>Tags</a>:
 <ul>
@@ -258,7 +258,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <li><a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>Python</a></li>
 <ul>
 <li hugo-nav=/material/languages/python/>
-<a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Python Intro</a>
+<a href=https://bkleinen.github.io/stagingdrafts/material/languages/python/>Notes on Learning Python</a>
 </li>
 <li hugo-nav=/material/languages/python-resources/>
 <a href=https://bkleinen.github.io/stagingdrafts/material/languages/python-resources/>Python Resources</a>
