--- a/material/languages/python-resources/index.html
+++ b/material/languages/python-resources/index.html
@@ -110,16 +110,19 @@ within Taxonomies:
 <a href=https://bkleinen.github.io/stagingdrafts/material/tags/python/>python</a>
 &nbsp;
 <hr>
+<p>This is a collection of Python Resources. See <a href=../python/>Python Notes</a></p>
 <h2 id=the-official-python-documentation>The Official Python Documentation</h2>
 <ul>
-<li><a href=https://docs.python.org/3/tutorial/>The Python Tutorial — Python 3.10.0 documentation</a></li>
-<li><a href=https://docs.python.org/3/library/unittest.html>unittest — Unit testing framework — Python 3.10.0 documentation</a></li>
-<li><a href=https://docs.python.org/3/tutorial/modules.html#tut-modules>6. Modules — Python 3.10.0 documentation</a></li>
+<li><a href=https://docs.python.org/3/>3.10.0 Documentation</a></li>
+<li><a href=https://docs.python.org/3/library/index.html>The Python Standard Library — Python 3.10.0 documentation</a></li>
+<li><a href=https://docs.python.org/3/reference/index.html>The Python Language Reference — Python 3.10.0 documentation</a></li>
+<li><a href=https://docs.python.org/3/using/index.html>Python Setup and Usage — Python 3.10.0 documentation</a></li>
+<li><a href=https://docs.python.org/3/tutorial/index.html>The Python Tutorial — Python 3.10.0 documentation</a></li>
 </ul>
 <h2 id=books>Books</h2>
 <ul>
 <li>
-<p><a href=https://introcs.cs.princeton.edu/python/home/>Robert Sedgewick, Kevin Wayne, Robert Dondero: Introduction to Programming in Python: An Interdisciplinary Approach. Pearson, 2015</a><br>
+<p><a href=https://introcs.cs.princeton.edu/python/home/>Robert Sedgewick, Kevin Wayne, Robert Dondero: Introduction to Programming in Python: An Interdisciplinary Approach. Pearson, 2015</a>
 The linked companion website contains excerpts and lots of examples:</p>
 <ul>
 <li><a href=https://introcs.cs.princeton.edu/python/10elements/>Elements of Programming</a></li>
@@ -127,28 +130,33 @@ The linked companion website contains excerpts and lots of examples:</p>
 <li><a href=https://introcs.cs.princeton.edu/python/30oop/>Object Oriented Programming</a></li>
 <li><a href=https://introcs.cs.princeton.edu/python/40algorithms/>Algorithms and Data Structures</a></li>
 </ul>
+<p>I&rsquo;ve compiled the source code examples in the repo
+<a href=https://github.com/htw-imi-info2/python-programming-exercises>htw-imi-info2/python-programming-exercises</a> - this site contains an overview: <a href=https://introcs.cs.princeton.edu/python/code/>Python Programs in the Textbook</a></p>
 </li>
 <li>
-<p><a href=https://automatetheboringstuff.com/2e/>Automate the Boring Stuff with Python</a></p>
+<p>Al Sweigart&rsquo;s <a href=https://automatetheboringstuff.com/2e/>Automate the Boring Stuff with Python</a> is free to read under a Creative Commons license.</p>
 <ul>
-<li><a href=https://github.com/asweigart/automateboringstuff>asweigart/automateboringstuff: This package installs the modules used in &ldquo;Automate the Boring Stuff with Python&rdquo;, 2nd Edition.</a></li>
+<li>The source code is available here: <a href=https://github.com/asweigart/automateboringstuff>asweigart/automateboringstuff: This package installs the modules used in &ldquo;Automate the Boring Stuff with Python&rdquo;, 2nd Edition.</a></li>
 </ul>
 </li>
 </ul>
-<h2 id=jupyter-notebooks>Jupyter Notebooks</h2>
+<h2 id=source-code-repos>Source Code Repos</h2>
+<h3 id=at-htw-imi-info2httpsgithubcomhtw-imi-info2>at <a href=https://github.com/htw-imi-info2>htw-imi-info2</a></h3>
 <ul>
-<li><a href=https://github.com/htw-imi-info2/python-jupyter-notebooks>https://github.com/htw-imi-info2/python-jupyter-notebooks</a></li>
+<li><a href=https://github.com/htw-imi-info2/learn-python-with-tests>htw-imi-info2/learn-python-with-tests</a></li>
+<li><a href=https://github.com/htw-imi-info2/python-programming-exercises>htw-imi-info2/python-programming-exercises</a></li>
+<li>Compiled Examples from Sedgewick, Wayne and Dondero: <a href=https://github.com/htw-imi-info2/programming-in-python-code-examples>htw-imi-info2/programming-in-python-code-examples</a></li>
 </ul>
-<h2 id=examples-to-check-out>Examples to check out</h2>
-<ul>
-<li><a href=https://introcs.cs.princeton.edu/python/16pagerank/markov.py.html>markov.py</a></li>
-<li><a href=https://github.com/asweigart/mondrian_art_generator/blob/master/README.md>mondrian_art_generator/README.md at master · asweigart/mondrian_art_generator</a></li>
-</ul>
-<h2 id=scrapy>Scrapy</h2>
+<h2 id=other-interesting-stuff--libraries>Other interesting stuff & Libraries</h2>
+<h3 id=scrapy>Scrapy</h3>
 <ul>
 <li><a href=https://scrapy.org/>Scrapy | A Fast and Powerful Scraping and Web Crawling Framework</a></li>
 <li><a href=https://docs.scrapy.org/en/latest/>Scrapy 2.5 documentation — Scrapy 2.5.1 documentation</a></li>
 <li><a href=https://docs.scrapy.org/en/latest/intro/tutorial.html>Scrapy Tutorial — Scrapy 2.5.1 documentation</a></li>
+</ul>
+<h3 id=monty-pythons-flying-circus>Monty Python&rsquo;s Flying Circus</h3>
+<ul>
+<li>if you haven&rsquo;t watched it, you should do so: <a href="https://www.youtube.com/results?search_query=monty+python%27s+flying+circus">https://www.youtube.com/results?search_query=monty+python%27s+flying+circus</a></li>
 </ul>
 </div>
 </div>
