small update for wise2021 bkleinen/bkleinen.github.io@12ba22da2e635df32e18f05786c1baff87b8af4c

--- a/classes/ws2021/info2/labs/lab-07/index.html
+++ b/classes/ws2021/info2/labs/lab-07/index.html
@@ -148,14 +148,14 @@ Table of Contents
 </div>
 <p><img src=../images/SierpinskiTriangle.png alt=Machine title="Sierpinski Triangle"></p>
 <h2 id=pre-lab>Pre-Lab</h2>
-<p><em><strong>P1.</strong></em> What exactly is an equilateral triangle? Can you write a class that draws a triangle? What data do you need to know in order to put a triangle at a particular position on the screen?</p>
+<p><em><strong>P1.</strong></em> What exactly is an equilateral triangle? Draft a class that draws a triangle. What data do you need to know in order to put a triangle at a particular position on the screen?</p>
 <p><em><strong>P2.</strong></em> What is the mathematical formula for finding the midpoint of a line segment that connects two Points?</p>
 <p><em><strong>P3.</strong></em> What is the resolution of your computer screen? How can you find out? What is the largest equilateral triangle that you can show on a screen with this resolution?</p>
 <p><em><strong>P4.</strong></em> Briefly describe what a Sierpinski Triangle is.</p>
 <h2 id=assignment>Assignment</h2>
 <ol>
 <li>
-<p>First set up a Window that can handle drawing. Get the Window to draw an equilateral triangle. You can use this scaffold: <a href=https://github.com/LiFaytheGoblin/SierpinskyTriangleStart>SierpinskyTriangleStart</a>.</p>
+<p>First set up a Window that can handle drawing. Get the Window to draw an equilateral triangle. You can use this scaffold: <a href=https://gl-imi.f4.htw-berlin.de/info2-code-stubs-and-samples/sierpinskytrianglestart>SierpinskyTriangleStart</a>.</p>
 </li>
 <li>
 <p>Once you can draw the triangle, now draw a triangle that connects the midpoints of each of the lines. You now have 4 triangles. For each of the <em>three outer triangles</em>, recursively draw a triangle that connects the midpoints.</p>
