info2 schedule update bkleinen/bkleinen.github.io@051fae2162b3010b8c510e80d026d672f4a7d000

--- a/classes/ws2021/info2/schedule/index.html
+++ b/classes/ws2021/info2/schedule/index.html
@@ -263,7 +263,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 24/11/2021</td>
-<td style=text-align:left>Trees (Tree.java - Node.java - TestTree.java</td>
+<td style=text-align:left>Trees</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -271,7 +271,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>9</td>
 <td style=text-align:left>48</td>
 <td style=text-align:left>Tue 30/11/2021</td>
-<td style=text-align:left>AVL-Trees (AVL Tutorial), Tries</td>
+<td style=text-align:left>Trees, AVL-Trees</td>
 <td style=text-align:left><a href=../labs/lab-08>Eight Queens</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -287,7 +287,7 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left>10</td>
 <td style=text-align:left>49</td>
 <td style=text-align:left>Tue 07/12/2021</td>
-<td style=text-align:left>Graphs</td>
+<td style=text-align:left>Graphs, Graph Algorithms</td>
 <td style=text-align:left><a href=../labs/lab-09>Probabilistic Algorithms</a></td>
 <td style=text-align:left></td>
 </tr>
@@ -440,6 +440,14 @@ at <a href=https://www.htw-berlin.de>HTW Berlin</a>
 <td style=text-align:left></td>
 <td style=text-align:left>Wed 09/02/2022</td>
 <td style=text-align:left>PZ1</td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+</tr>
+<tr>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
+<td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
