--- a/classes/ws2021/networks/labs/lab02_ch02/index.html
+++ b/classes/ws2021/networks/labs/lab02_ch02/index.html
@@ -137,6 +137,7 @@ Table of Contents
 </a>
 &nbsp;&nbsp;&nbsp;&nbsp;
 <a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/labs/lab01_ch01/>&lt;prev</a>
+<a href=https://bkleinen.github.io/stagingdrafts/classes/ws2021/networks/labs/lab03/>next></a>
 </header>
 <div class=collapse id=tocContent>
 <nav id=TableOfContents>
